adicionado medo getById getByStatus getByPeriodoLetivo

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,4 @@
 #arquivo
 arquivo.formato-nao-suportado=Arquivo do formato
 usuario.nao-encontrado=Busca de
+nao-encontrado=Nao foi possivel encontrar
