--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,5 @@
+#recurso
+recurso.operacao-invalida=Algo de errado nao deu certo
 #arquivo
 arquivo.formato-nao-suportado=Arquivo do formato
 usuario.nao-encontrado=Busca de
