login e cadastro de usuarios

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,3 +5,6 @@ arquivo.formato-nao-suportado=Arquivo do formato
 usuario.nao-encontrado=Busca de
 nao-encontrado=Nao foi possivel encontrar
 deletado-com-sucesso=Extracao deletada com sucesso.
+#login
+login.usuario.nao-permitido=Usuario logado não permitido para acesso
+login.credenciais-invalidas=Email ou Senha invalidos
