alteracoes de autorizacao

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,8 +3,10 @@ recurso.operacao-invalida=Algo de errado nao deu certo
 #arquivo
 arquivo.formato-nao-suportado=Arquivo do formato
 usuario.nao-encontrado=Busca de
-nao-encontrado=Nao foi possivel encontrar
+nao-encontrado=Nao foi possivel encontrar a informacao
 deletado-com-sucesso=Extracao deletada com sucesso.
 #login
 login.usuario.nao-permitido=Usuario logado não permitido para acesso
 login.credenciais-invalidas=Email ou Senha invalidos
+login.usuario.dominio-invalido=Dominio do email invalido
+login.usuario.ja-existente=Usuario ja existente. Altere as informacoes e tente novamente
