cancelar e ativar extracoes

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -10,3 +10,5 @@ login.usuario.nao-permitido=Usuario logado não permitido para acesso
 login.credenciais-invalidas=Email ou Senha invalidos
 login.usuario.dominio-invalido=Dominio do email invalido
 login.usuario.ja-existente=Usuario ja existente. Altere as informacoes e tente novamente
+#operacao
+operacao.operacao-invalida=Operacao invalida:
